<resources>
    <string name="app_name">Pragya</string>
    <string name="start">START</string>
    <string name="sign_in">Continue with Google</string>
    <string name="about_devs">About Devs</string>
    <string name="settings">Settings</string>
    <string name="about_developers">Developers</string>
    <string name="about">About Pragya</string>
    <string name="my_profile">My Profile</string>
    <string name="long_splash">BIOS Like Long Startup</string>
    <string name="switch_on">Switch On</string>
    <string name="abt_user">User</string>
    <string name="tip_about_vibrations">Tip: You can disable haptic vibrations from anywhere in the app by simply pressing the volume up and down buttons once!</string>
    <string name="image_of_retro_switch">Image of Retro Switch</string>
    <string-array name="loading_msg">
        <item>Choosing Between The Blue and Red Pill</item>
        <item>Filling Pot with Stones</item>
        <item>Melting the Chocolate</item>
        <item>Downloading more RAM…</item>
        <item>the beginning is the end…</item>
        <item>…and the end is the beginning</item>
        <item>We\'re building the buildings as fast as we can</item>
        <item>Counting backwards from Infinity…</item>
        <item>Warning: Don\'t set yourself on fire.</item>
        <item>Adjusting flux capacitor…</item>
        <item>Spinning the hamster…</item>
        <item>Winter is coming…</item>
        <item>Downloading more RAM..</item>
        <item>Pushing pixels…</item>
        <item>Did you try tapping in the bottom of settings…?</item>
        <item>Still faster than Windows update</item>
        <item>Travelling through time…</item>
        <item>Thinking Of an Offer Which You Can\'t Refuse</item>
        <item>Making the Cat Meow</item>
        <item>Making the Earth Flat</item>
    </string-array>
    <string name="title_activity_main">Pragya Retro</string>
    <string name="high_score">High score: </string>
    <string name="new_game">Start New</string>
    <string name="reset_high_score">Reset score</string>
    <string name="score">"Score: "</string>
    <string name="multiplier">"Multiplier: "</string>
    <string name="lives">"Lives: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_over">Game Over</string>
    <string name="new_high_score">"New high score: "</string>
    <string name="do_you_want_to_restart_the_game">Do you dare to restart?</string>
    <string name="final_score">"Final score: "</string>
    <string name="difficult">Difficulty: </string>
    <string name="explosive_brick_explanation">Explosive brick (breaks all bricks around it)</string>
    <string name="moveable_brick_explanation">Movable brick (keeps moving from one side to another)</string>
    <string name="hard_brick_explanation">Hard brick (need 2 hits to break)</string>
    <string name="special_bricks">Special bricks:</string>
    <string name="ready">Ready?</string>
    <string name="psss_just_between_you_and_me">Psss&#8230; Just between you and me</string>
    <string name="do_you_want_to_get_the_maximum_score_for_free">Do you want to get the maximum score for free?</string>
    <string name="do_you_want_to_reset_the_high_score_to_zero">Do you want to reset the high score to zero?</string>
    <string name="enable_sound_effects">Enable sound effects</string>
    <string name="pragya_retro_easter">Pragya Retro Easter</string>

    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>Float</item>
    </string-array>

    <string name="device">Device:</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="permission_external_storage_rationale">Access to the external storage is needed for saving</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="about_placeholder">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
    </string>
    <string name="next">NEXT</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome to Pragya</string>
    <string name="motto">The Currency Friendly A.I</string>
    <string name="step_2">Step #2</string>
    <string name="ins_2">Then tap on the bottom right</string>
    <string name="about_pragya">About Pragya</string>
    <string name="download_pragya_document">Placeholder Button</string>
</resources>